--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
             let newTodo = input.value;
             let todo = document.createElement('li');
             todo.innerHTML = newTodo;
+            todo.style = "color: red";
             todoList.append(todo);
+            input.value = "";
         });
 
 
